--- a/gallery.html
+++ b/gallery.html
@@ -9,67 +9,37 @@
     body {
       font-family: "Inter", sans-serif;
       background-color: #f8f9fa;
+      overflow-x: hidden;
     }
 
     header {
       background: linear-gradient(90deg, #0b5ed7, #2b9ed7);
     }
 
-    .gallery-item img {
-      transition: transform 0.4s ease, box-shadow 0.4s ease;
-      cursor: pointer;
-    }
-
-    .gallery-item:hover img {
-      transform: scale(1.05);
-      box-shadow: 0 4px 15px rgba(0, 0, 0, 0.3);
-    }
-
     footer {
       background: #0b5ed7;
     }
 
-    .btn-outline-primary {
-      border-color: #0b5ed7;
-      color: #0b5ed7;
-      border-radius: 25px;
-      transition: all 0.3s ease;
-    }
-
-    .btn-outline-primary:hover {
-      background: #0b5ed7;
-      color: white;
-    }
-
-    /* Lightbox */
+    /* Lightbox (fullscreen viewer) */
     #lightbox {
-      display: none;
+      display: flex;
       position: fixed;
       z-index: 9999;
       top: 0;
       left: 0;
       width: 100%;
       height: 100%;
-      background: rgba(0,0,0,0.9);
+      background: rgba(0,0,0,0.95);
       align-items: center;
       justify-content: center;
       flex-direction: column;
     }
 
     #lightbox img {
-      max-width: 90%;
-      max-height: 80%;
+      max-width: 95%;
+      max-height: 90%;
       border-radius: 10px;
-      box-shadow: 0 0 25px rgba(255,255,255,0.2);
-      transition: opacity 0.4s ease;
-    }
-
-    #caption {
-      color: white;
-      margin-top: 15px;
-      font-size: 1rem;
-      opacity: 0.85;
-      text-align: center;
+      transition: opacity 0.5s ease;
     }
 
     #lightbox .controls {
@@ -86,7 +56,7 @@
       background: none;
       border: none;
       color: white;
-      font-size: 2rem;
+      font-size: 2.2rem;
       cursor: pointer;
       transition: 0.3s;
     }
@@ -99,7 +69,7 @@
       position: absolute;
       top: 20px;
       right: 30px;
-      font-size: 2rem;
+      font-size: 2.2rem;
       color: white;
       cursor: pointer;
       transition: 0.3s;
@@ -109,9 +79,24 @@
       color: #0b5ed7;
     }
 
-    @media (max-width: 576px) {
-      header h2 { font-size: 1.4rem; }
-      header p { font-size: 0.9rem; }
+    /* Home Button */
+    #homeButton {
+      display: none;
+      position: fixed;
+      bottom: 40px;
+      left: 50%;
+      transform: translateX(-50%);
+      background: #0b5ed7;
+      color: white;
+      padding: 10px 25px;
+      border-radius: 30px;
+      text-decoration: none;
+      font-weight: 500;
+      transition: background 0.3s;
+    }
+
+    #homeButton:hover {
+      background: #2b9ed7;
     }
   </style>
 </head>
@@ -120,71 +105,21 @@
   <!-- HEADER -->
   <header class="text-white text-center py-4 shadow-sm">
     <h2>Noorussalam Madrasa — Photo Gallery</h2>
-    <p>Memorable moments from our campus life</p>
+    <p>Beautiful moments from our Madrasa</p>
   </header>
 
-  <!-- GALLERY -->
-  <section id="gallery" class="py-5">
-    <div class="container">
-      <div class="row g-3">
-
-        <!-- Gallery Images with captions -->
-        <div class="col-6 col-md-4 col-lg-3 gallery-item">
-          <img src="https://i.ibb.co/FbjR9zTZ/Whats-App-Image-2025-10-28-at-3-43-55-PM.jpg" alt="Annual Function" class="img-fluid rounded shadow-sm" data-caption="Annual Function Celebration 2025">
-        </div>
-        <div class="col-6 col-md-4 col-lg-3 gallery-item">
-          <img src="https://i.ibb.co/whNzN51r/Whats-App-Image-2025-10-28-at-3-43-48-PM.jpg" alt="Classroom" class="img-fluid rounded shadow-sm" data-caption="Interactive Classroom Session">
-        </div>
-        <div class="col-6 col-md-4 col-lg-3 gallery-item">
-          <img src="https://i.ibb.co/k6h2j78B/Whats-App-Image-2025-10-28-at-3-42-31-PM.jpg" alt="Prize Distribution" class="img-fluid rounded shadow-sm" data-caption="Annual Prize Distribution">
-        </div>
-        <div class="col-6 col-md-4 col-lg-3 gallery-item">
-          <img src="https://i.ibb.co/yFJ24kWv/Whats-App-Image-2025-10-28-at-3-41-14-PM.jpg" alt="Sports Day" class="img-fluid rounded shadow-sm" data-caption="Sports Day Celebration">
-        </div>
-        <div class="col-6 col-md-4 col-lg-3 gallery-item">
-          <img src="https://i.ibb.co/S4MY80MX/Whats-App-Image-2025-10-28-at-3-41-08-PM.jpg" alt="Morning Assembly" class="img-fluid rounded shadow-sm" data-caption="Morning Assembly at Campus">
-        </div>
-        <div class="col-6 col-md-4 col-lg-3 gallery-item">
-          <img src="https://i.ibb.co/j9vCtcn1/Whats-App-Image-2025-10-28-at-3-40-55-PM.jpg" alt="Students Reading" class="img-fluid rounded shadow-sm" data-caption="Students Reading in Library">
-        </div>
-        <div class="col-6 col-md-4 col-lg-3 gallery-item">
-          <img src="https://i.ibb.co/qYwwbXWh/Whats-App-Image-2025-10-28-at-3-40-42-PM.jpg" alt="Cultural Event" class="img-fluid rounded shadow-sm" data-caption="Cultural Day Program">
-        </div>
-        <div class="col-6 col-md-4 col-lg-3 gallery-item">
-          <img src="https://i.ibb.co/hJvfZp4b/Whats-App-Image-2025-10-28-at-3-39-08-PM.jpg" alt="Group Photo" class="img-fluid rounded shadow-sm" data-caption="Group Photo — Senior Students">
-        </div>
-        <div class="col-6 col-md-4 col-lg-3 gallery-item">
-          <img src="https://i.ibb.co/Kcb61F1f/Whats-App-Image-2025-10-28-at-3-38-43-PM.jpg" alt="Quran Recitation" class="img-fluid rounded shadow-sm" data-caption="Qur’an Recitation Competition">
-        </div>
-        <div class="col-6 col-md-4 col-lg-3 gallery-item">
-          <img src="https://i.ibb.co/s9HQzNd3/Whats-App-Image-2025-10-28-at-3-38-36-PM.jpg" alt="Science Fair" class="img-fluid rounded shadow-sm" data-caption="Science Fair Presentation">
-        </div>
-        <div class="col-6 col-md-4 col-lg-3 gallery-item">
-          <img src="https://i.ibb.co/mrCZd07k/Whats-App-Image-2025-10-28-at-3-37-52-PM.jpg" alt="Library" class="img-fluid rounded shadow-sm" data-caption="Students in the Library">
-        </div>
-        <div class="col-6 col-md-4 col-lg-3 gallery-item">
-          <img src="https://i.ibb.co/j9vCtcn1/Whats-App-Image-2025-10-28-at-3-40-55-PM.jpg" alt="Farewell" class="img-fluid rounded shadow-sm" data-caption="Farewell Ceremony — Class 12">
-        </div>
-
-      </div>
-
-      <!-- Back to Home -->
-      <div class="text-center mt-5">
-        <a href="index.html" class="btn btn-outline-primary px-4">← Back to Home</a>
-      </div>
-    </div>
-  </section>
-
-  <!-- LIGHTBOX -->
+  <!-- LIGHTBOX SLIDESHOW -->
   <div id="lightbox">
     <span id="closeBtn">&times;</span>
     <div class="controls">
       <button id="prevBtn">❮</button>
       <button id="nextBtn">❯</button>
     </div>
-    <img id="lightboxImage" src="" alt="Gallery Image">
-    <div id="caption"></div>
+    <img id="lightboxImage" src="" alt="">
   </div>
+
+  <!-- BACK TO HOME -->
+  <a id="homeButton" href="index.html">← Back to Home</a>
 
   <!-- FOOTER -->
   <footer class="text-white text-center py-3 mt-4">
@@ -192,33 +127,36 @@
   </footer>
 
   <script>
-    const images = document.querySelectorAll('.gallery-item img');
+    // Your image links
+    const images = [
+      "https://i.ibb.co/FbjR9zTZ/Whats-App-Image-2025-10-28-at-3-43-55-PM.jpg",
+      "https://i.ibb.co/whNzN51r/Whats-App-Image-2025-10-28-at-3-43-48-PM.jpg",
+      "https://i.ibb.co/k6h2j78B/Whats-App-Image-2025-10-28-at-3-42-31-PM.jpg",
+      "https://i.ibb.co/yFJ24kWv/Whats-App-Image-2025-10-28-at-3-41-14-PM.jpg",
+      "https://i.ibb.co/S4MY80MX/Whats-App-Image-2025-10-28-at-3-41-08-PM.jpg",
+      "https://i.ibb.co/j9vCtcn1/Whats-App-Image-2025-10-28-at-3-40-55-PM.jpg",
+      "https://i.ibb.co/qYwwbXWh/Whats-App-Image-2025-10-28-at-3-40-42-PM.jpg",
+      "https://i.ibb.co/hJvfZp4b/Whats-App-Image-2025-10-28-at-3-39-08-PM.jpg",
+      "https://i.ibb.co/Kcb61F1f/Whats-App-Image-2025-10-28-at-3-38-43-PM.jpg",
+      "https://i.ibb.co/s9HQzNd3/Whats-App-Image-2025-10-28-at-3-38-36-PM.jpg",
+      "https://i.ibb.co/mrCZd07k/Whats-App-Image-2025-10-28-at-3-37-52-PM.jpg"
+    ];
+
     const lightbox = document.getElementById('lightbox');
     const lightboxImage = document.getElementById('lightboxImage');
-    const caption = document.getElementById('caption');
     const closeBtn = document.getElementById('closeBtn');
     const nextBtn = document.getElementById('nextBtn');
     const prevBtn = document.getElementById('prevBtn');
+    const homeButton = document.getElementById('homeButton');
     let currentIndex = 0;
     let autoSlide;
 
-    images.forEach((img, index) => {
-      img.addEventListener('click', () => {
-        currentIndex = index;
-        showImage();
-      });
-    });
-
     function showImage() {
-      const img = images[currentIndex];
-      lightbox.style.display = 'flex';
       lightboxImage.style.opacity = 0;
       setTimeout(() => {
-        lightboxImage.src = img.src;
-        caption.innerText = img.getAttribute('data-caption') || "";
+        lightboxImage.src = images[currentIndex];
         lightboxImage.style.opacity = 1;
-      }, 100);
-      startAutoSlide();
+      }, 150);
     }
 
     function nextImage() {
@@ -229,6 +167,15 @@
     function prevImage() {
       currentIndex = (currentIndex - 1 + images.length) % images.length;
       showImage();
+    }
+
+    function startAutoSlide() {
+      stopAutoSlide();
+      autoSlide = setInterval(nextImage, 4000);
+    }
+
+    function stopAutoSlide() {
+      clearInterval(autoSlide);
     }
 
     nextBtn.addEventListener('click', () => {
@@ -243,26 +190,16 @@
 
     closeBtn.addEventListener('click', () => {
       lightbox.style.display = 'none';
+      homeButton.style.display = 'inline-block';
       stopAutoSlide();
     });
 
-    lightbox.addEventListener('click', (e) => {
-      if (e.target === lightbox) {
-        lightbox.style.display = 'none';
-        stopAutoSlide();
-      }
-    });
-
-    // Auto slideshow
-    function startAutoSlide() {
-      stopAutoSlide();
-      autoSlide = setInterval(nextImage, 4000);
-    }
-
-    function stopAutoSlide() {
-      clearInterval(autoSlide);
-    }
+    // Auto-start slideshow when page loads
+    window.onload = () => {
+      lightbox.style.display = 'flex';
+      showImage();
+      startAutoSlide();
+    };
   </script>
 </body>
 </html>
-
