--- a/gallery.html
+++ b/gallery.html
@@ -16,13 +16,35 @@
       background: linear-gradient(90deg, #0b5ed7, #2b9ed7);
     }
 
+    .gallery-item img {
+      transition: transform 0.4s ease, box-shadow 0.4s ease;
+      cursor: pointer;
+    }
+
+    .gallery-item:hover img {
+      transform: scale(1.05);
+      box-shadow: 0 4px 15px rgba(0, 0, 0, 0.3);
+    }
+
+    .btn-outline-primary {
+      border-color: #0b5ed7;
+      color: #0b5ed7;
+      border-radius: 25px;
+      transition: all 0.3s ease;
+    }
+
+    .btn-outline-primary:hover {
+      background: #0b5ed7;
+      color: white;
+    }
+
     footer {
       background: #0b5ed7;
     }
 
-    /* Lightbox (fullscreen viewer) */
+    /* Lightbox */
     #lightbox {
-      display: flex;
+      display: none;
       position: fixed;
       z-index: 9999;
       top: 0;
@@ -56,7 +78,7 @@
       background: none;
       border: none;
       color: white;
-      font-size: 2.2rem;
+      font-size: 2rem;
       cursor: pointer;
       transition: 0.3s;
     }
@@ -69,7 +91,7 @@
       position: absolute;
       top: 20px;
       right: 30px;
-      font-size: 2.2rem;
+      font-size: 2rem;
       color: white;
       cursor: pointer;
       transition: 0.3s;
@@ -79,24 +101,9 @@
       color: #0b5ed7;
     }
 
-    /* Home Button */
-    #homeButton {
-      display: none;
-      position: fixed;
-      bottom: 40px;
-      left: 50%;
-      transform: translateX(-50%);
-      background: #0b5ed7;
-      color: white;
-      padding: 10px 25px;
-      border-radius: 30px;
-      text-decoration: none;
-      font-weight: 500;
-      transition: background 0.3s;
-    }
-
-    #homeButton:hover {
-      background: #2b9ed7;
+    @media (max-width: 576px) {
+      header h2 { font-size: 1.4rem; }
+      header p { font-size: 0.9rem; }
     }
   </style>
 </head>
@@ -108,7 +115,59 @@
     <p>Beautiful moments from our Madrasa</p>
   </header>
 
-  <!-- LIGHTBOX SLIDESHOW -->
+  <!-- GALLERY -->
+  <section id="gallery" class="py-5">
+    <div class="container">
+      <div class="row g-3">
+
+        <!-- Gallery Images -->
+        <div class="col-6 col-md-4 col-lg-3 gallery-item">
+          <img src="https://i.ibb.co/FbjR9zTZ/Whats-App-Image-2025-10-28-at-3-43-55-PM.jpg" class="img-fluid rounded shadow-sm" alt="">
+        </div>
+        <div class="col-6 col-md-4 col-lg-3 gallery-item">
+          <img src="https://i.ibb.co/whNzN51r/Whats-App-Image-2025-10-28-at-3-43-48-PM.jpg" class="img-fluid rounded shadow-sm" alt="">
+        </div>
+        <div class="col-6 col-md-4 col-lg-3 gallery-item">
+          <img src="https://i.ibb.co/k6h2j78B/Whats-App-Image-2025-10-28-at-3-42-31-PM.jpg" class="img-fluid rounded shadow-sm" alt="">
+        </div>
+        <div class="col-6 col-md-4 col-lg-3 gallery-item">
+          <img src="https://i.ibb.co/yFJ24kWv/Whats-App-Image-2025-10-28-at-3-41-14-PM.jpg" class="img-fluid rounded shadow-sm" alt="">
+        </div>
+        <div class="col-6 col-md-4 col-lg-3 gallery-item">
+          <img src="https://i.ibb.co/S4MY80MX/Whats-App-Image-2025-10-28-at-3-41-08-PM.jpg" class="img-fluid rounded shadow-sm" alt="">
+        </div>
+        <div class="col-6 col-md-4 col-lg-3 gallery-item">
+          <img src="https://i.ibb.co/j9vCtcn1/Whats-App-Image-2025-10-28-at-3-40-55-PM.jpg" class="img-fluid rounded shadow-sm" alt="">
+        </div>
+        <div class="col-6 col-md-4 col-lg-3 gallery-item">
+          <img src="https://i.ibb.co/qYwwbXWh/Whats-App-Image-2025-10-28-at-3-40-42-PM.jpg" class="img-fluid rounded shadow-sm" alt="">
+        </div>
+        <div class="col-6 col-md-4 col-lg-3 gallery-item">
+          <img src="https://i.ibb.co/hJvfZp4b/Whats-App-Image-2025-10-28-at-3-39-08-PM.jpg" class="img-fluid rounded shadow-sm" alt="">
+        </div>
+        <div class="col-6 col-md-4 col-lg-3 gallery-item">
+          <img src="https://i.ibb.co/Kcb61F1f/Whats-App-Image-2025-10-28-at-3-38-43-PM.jpg" class="img-fluid rounded shadow-sm" alt="">
+        </div>
+        <div class="col-6 col-md-4 col-lg-3 gallery-item">
+          <img src="https://i.ibb.co/s9HQzNd3/Whats-App-Image-2025-10-28-at-3-38-36-PM.jpg" class="img-fluid rounded shadow-sm" alt="">
+        </div>
+        <div class="col-6 col-md-4 col-lg-3 gallery-item">
+          <img src="https://i.ibb.co/mrCZd07k/Whats-App-Image-2025-10-28-at-3-37-52-PM.jpg" class="img-fluid rounded shadow-sm" alt="">
+        </div>
+        <div class="col-6 col-md-4 col-lg-3 gallery-item">
+          <img src="https://i.ibb.co/j9vCtcn1/Whats-App-Image-2025-10-28-at-3-40-55-PM.jpg" class="img-fluid rounded shadow-sm" alt="">
+        </div>
+
+      </div>
+
+      <!-- Back to Home -->
+      <div class="text-center mt-5">
+        <a href="index.html" class="btn btn-outline-primary px-4">← Back to Home</a>
+      </div>
+    </div>
+  </section>
+
+  <!-- LIGHTBOX -->
   <div id="lightbox">
     <span id="closeBtn">&times;</span>
     <div class="controls">
@@ -118,45 +177,36 @@
     <img id="lightboxImage" src="" alt="">
   </div>
 
-  <!-- BACK TO HOME -->
-  <a id="homeButton" href="index.html">← Back to Home</a>
-
   <!-- FOOTER -->
   <footer class="text-white text-center py-3 mt-4">
     <small>© 2025 Noorussalam Madrasa. All rights reserved.</small>
   </footer>
 
   <script>
-    // Your image links
-    const images = [
-      "https://i.ibb.co/FbjR9zTZ/Whats-App-Image-2025-10-28-at-3-43-55-PM.jpg",
-      "https://i.ibb.co/whNzN51r/Whats-App-Image-2025-10-28-at-3-43-48-PM.jpg",
-      "https://i.ibb.co/k6h2j78B/Whats-App-Image-2025-10-28-at-3-42-31-PM.jpg",
-      "https://i.ibb.co/yFJ24kWv/Whats-App-Image-2025-10-28-at-3-41-14-PM.jpg",
-      "https://i.ibb.co/S4MY80MX/Whats-App-Image-2025-10-28-at-3-41-08-PM.jpg",
-      "https://i.ibb.co/j9vCtcn1/Whats-App-Image-2025-10-28-at-3-40-55-PM.jpg",
-      "https://i.ibb.co/qYwwbXWh/Whats-App-Image-2025-10-28-at-3-40-42-PM.jpg",
-      "https://i.ibb.co/hJvfZp4b/Whats-App-Image-2025-10-28-at-3-39-08-PM.jpg",
-      "https://i.ibb.co/Kcb61F1f/Whats-App-Image-2025-10-28-at-3-38-43-PM.jpg",
-      "https://i.ibb.co/s9HQzNd3/Whats-App-Image-2025-10-28-at-3-38-36-PM.jpg",
-      "https://i.ibb.co/mrCZd07k/Whats-App-Image-2025-10-28-at-3-37-52-PM.jpg"
-    ];
-
+    const images = document.querySelectorAll('.gallery-item img');
     const lightbox = document.getElementById('lightbox');
     const lightboxImage = document.getElementById('lightboxImage');
     const closeBtn = document.getElementById('closeBtn');
     const nextBtn = document.getElementById('nextBtn');
     const prevBtn = document.getElementById('prevBtn');
-    const homeButton = document.getElementById('homeButton');
     let currentIndex = 0;
     let autoSlide;
 
+    images.forEach((img, index) => {
+      img.addEventListener('click', () => {
+        currentIndex = index;
+        showImage();
+      });
+    });
+
     function showImage() {
+      lightbox.style.display = 'flex';
       lightboxImage.style.opacity = 0;
       setTimeout(() => {
-        lightboxImage.src = images[currentIndex];
+        lightboxImage.src = images[currentIndex].src;
         lightboxImage.style.opacity = 1;
       }, 150);
+      startAutoSlide();
     }
 
     function nextImage() {
@@ -167,15 +217,6 @@
     function prevImage() {
       currentIndex = (currentIndex - 1 + images.length) % images.length;
       showImage();
-    }
-
-    function startAutoSlide() {
-      stopAutoSlide();
-      autoSlide = setInterval(nextImage, 4000);
-    }
-
-    function stopAutoSlide() {
-      clearInterval(autoSlide);
     }
 
     nextBtn.addEventListener('click', () => {
@@ -190,16 +231,26 @@
 
     closeBtn.addEventListener('click', () => {
       lightbox.style.display = 'none';
-      homeButton.style.display = 'inline-block';
       stopAutoSlide();
     });
 
-    // Auto-start slideshow when page loads
-    window.onload = () => {
-      lightbox.style.display = 'flex';
-      showImage();
-      startAutoSlide();
-    };
+    lightbox.addEventListener('click', (e) => {
+      if (e.target === lightbox) {
+        lightbox.style.display = 'none';
+        stopAutoSlide();
+      }
+    });
+
+    // Auto slideshow
+    function startAutoSlide() {
+      stopAutoSlide();
+      autoSlide = setInterval(nextImage, 4000);
+    }
+
+    function stopAutoSlide() {
+      clearInterval(autoSlide);
+    }
   </script>
 </body>
 </html>
+
