--- a/index.html
+++ b/index.html
@@ -419,6 +419,71 @@
     </div>
   </div>
 </section>
+<!-- HIGHLIGHTS SECTION -->
+<section id="highlights" class="py-5 bg-light">
+  <div class="container">
+    <div class="text-center mb-5">
+      <h2 class="fw-bold text-primary">Highlights</h2>
+      <p class="text-muted">Recent events and activities at Noorussalam Madrasa</p>
+    </div>
+
+    <div class="row gy-4">
+      <!-- Video 1 -->
+      <div class="col-md-4">
+        <div class="card shadow-sm border-0">
+          <div class="ratio ratio-16x9">
+            <iframe
+              src="https://www.youtube.com/embed/YOUTUBE_VIDEO_ID_1"
+              title="Annual Day Highlights"
+              allowfullscreen
+            ></iframe>
+          </div>
+          <div class="card-body text-center">
+            <h6 class="text-primary mb-0">Annual Day Highlights</h6>
+          </div>
+        </div>
+      </div>
+
+      <!-- Video 2 -->
+      <div class="col-md-4">
+        <div class="card shadow-sm border-0">
+          <div class="ratio ratio-16x9">
+            <iframe
+              src="https://www.youtube.com/embed/YOUTUBE_VIDEO_ID_2"
+              title="Cultural Programme"
+              allowfullscreen
+            ></iframe>
+          </div>
+          <div class="card-body text-center">
+            <h6 class="text-primary mb-0">Cultural Programme</h6>
+          </div>
+        </div>
+      </div>
+
+      <!-- Video 3 -->
+      <div class="col-md-4">
+        <div class="card shadow-sm border-0">
+          <div class="ratio ratio-16x9">
+            <iframe
+              src="https://www.youtube.com/embed/YOUTUBE_VIDEO_ID_3"
+              title="Students’ Achievements"
+              allowfullscreen
+            ></iframe>
+          </div>
+          <div class="card-body text-center">
+            <h6 class="text-primary mb-0">Students’ Achievements</h6>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="text-center mt-4">
+      <a href="youtube.html" class="btn btn-primary px-4 rounded-pill">
+        View More on YouTube →
+      </a>
+    </div>
+  </div>
+</section>
 
 <!-- NEWS -->
 <section id="news" class="py-5 text-center">
@@ -600,6 +665,7 @@
 
 </body>
 </html>
+
 
 
 
