--- a/index.html
+++ b/index.html
@@ -434,12 +434,12 @@
           <div class="ratio ratio-16x9">
             <iframe
               src="https://www.youtube.com/embed/YOUTUBE_VIDEO_ID_1"
-              title="Annual Day Highlights"
+              title="Meelad u nabi Highlights"
               allowfullscreen
             ></iframe>
           </div>
           <div class="card-body text-center">
-            <h6 class="text-primary mb-0">Annual Day Highlights</h6>
+            <h6 class="text-primary mb-0">Meelad u nabi Highlights</h6>
           </div>
         </div>
       </div>
@@ -450,12 +450,12 @@
           <div class="ratio ratio-16x9">
             <iframe
               src="https://www.youtube.com/embed/YOUTUBE_VIDEO_ID_2"
-              title="Cultural Programme"
+              title="Parents Programme"
               allowfullscreen
             ></iframe>
           </div>
           <div class="card-body text-center">
-            <h6 class="text-primary mb-0">Cultural Programme</h6>
+            <h6 class="text-primary mb-0">Parents Programme</h6>
           </div>
         </div>
       </div>
@@ -665,6 +665,7 @@
 
 </body>
 </html>
+
 
 
 
