--- a/index.html
+++ b/index.html
@@ -498,10 +498,10 @@
         <div class="carousel-item active">
           <div class="d-flex justify-content-center">
             <div class="card shadow-lg border-0" style="width: 22rem; background-color: rgba(255,255,255,0.1);">
-              <img src="https://i.ibb.co/Y497ZPLB/Pngtree-news-concept-newspaper-headline-news-14251153.png" class="card-img-top rounded-top" alt="Admission Open">
+              <img src="https://i.ibb.co/XrX5fh5M/study-tips-for-final-exams.webp" class="card-img-top rounded-top" alt="Admission Open">
               <div class="card-body">
-                <h5 class="card-title text-warning">Admission Open 2025</h5>
-                <p class="card-text text-light small">Enroll your child today for the new academic year.</p>
+                <h5 class="card-title text-warning">വാര്‍ഷിക പരീക്ഷ</h5>
+                <p class="card-text text-light small">2025-26 വര്‍ഷത്തിലെ വാര്‍ഷിക പരീക്ഷ 2026 ജനുവരി 31, ഫെബ്രുവരി 1,2,10,11,12 തിയ്യതികളില്‍.</p>
                 <a href="#" class="btn btn-outline-light btn-sm">Read More</a>
               </div>
             </div>
@@ -665,6 +665,7 @@
 
 </body>
 </html>
+
 
 
 
