--- a/index.html
+++ b/index.html
@@ -513,10 +513,10 @@
         <div class="carousel-item">
           <div class="d-flex justify-content-center">
             <div class="card shadow-lg border-0" style="width: 22rem; background-color: rgba(255,255,255,0.1);">
-              <img src="https://i.ibb.co/Y497ZPLB/Pngtree-news-concept-newspaper-headline-news-14251153.png" class="card-img-top rounded-top" alt="Annual Day">
+              <img src="https://i.ibb.co/LDJxRX0j/freelancer-pricing-04.png" class="card-img-top rounded-top" alt="Parents meet">
               <div class="card-body">
-                <h5 class="card-title text-warning">Annual Day Celebration</h5>
-                <p class="card-text text-light small">Join us for the grand Annual Day program on 15th November 2025.</p>
+                <h5 class="card-title text-warning">parents Meeting</h5>
+                <p class="card-text text-light small">Parents meeting codected on 16th November 2026.</p>
                 <a href="#" class="btn btn-outline-light btn-sm">Read More</a>
               </div>
             </div>
@@ -527,7 +527,7 @@
         <div class="carousel-item">
           <div class="d-flex justify-content-center">
             <div class="card shadow-lg border-0" style="width: 22rem; background-color: rgba(255,255,255,0.1);">
-              <img src="https://i.ibb.co/Y497ZPLB/Pngtree-news-concept-newspaper-headline-news-14251153.png" class="card-img-top rounded-top" alt="Results Announced">
+              <img src="https://i.ibb.co/Q3CbpwJF/seo.png" class="card-img-top rounded-top" alt="Results Announced">
               <div class="card-body">
                 <h5 class="card-title text-warning">Results Announced</h5>
                 <p class="card-text text-light small">Check out the 2024–25 academic results — congratulations to all!</p>
@@ -573,9 +573,9 @@
     </div>
 
     <div class="list-group shadow-sm">
-      <a href="#" class="list-group-item list-group-item-action d-flex justify-content-between align-items-start">
+      <a href="forms.html" class="list-group-item list-group-item-action d-flex justify-content-between align-items-start">
         <div>
-          <div class="fw-bold text-primary">Admission Open for 2025 Batch</div>
+          <div class="fw-bold text-primary">Admission Open for 2025 </div>
           <small class="text-muted">Apply now .</small>
         </div>
         <span class="badge bg-success rounded-pill">NEW</span>
@@ -586,7 +586,7 @@
       </a>
       <a href="#" class="list-group-item list-group-item-action">
         <div class="fw-bold text-primary">Holiday Notice</div>
-        <small class="text-muted">Closed on November 1 .</small>
+        <small class="text-muted">Closed after yearly examination .</small>
       </a>
       <a href="result.html" target="_blank" class="list-group-item list-group-item-action d-flex justify-content-between align-items-center">
         <div>
@@ -666,6 +666,7 @@
 
 </body>
 </html>
+
 
 
 
