--- a/index.html
+++ b/index.html
@@ -541,10 +541,10 @@
         <div class="carousel-item">
           <div class="d-flex justify-content-center">
             <div class="card shadow-lg border-0" style="width: 22rem; background-color: rgba(255,255,255,0.1);">
-              <img src="https://i.ibb.co/Y497ZPLB/Pngtree-news-concept-newspaper-headline-news-14251153.png" class="card-img-top rounded-top" alt="Holiday Notice">
+              <img src="https://i.ibb.co/sJpPN6TV/Whats-App-Image-2025-11-07-at-3-36-56-PM.jpg" class="card-img-top rounded-top" alt="samastha">
               <div class="card-body">
-                <h5 class="card-title text-warning">Holiday Notice</h5>
-                <p class="card-text text-light small">The Madrasa will remain closed from 25th to 29th October for Eid Holidays.</p>
+                <h5 class="card-title text-warning">സമസ്ത നൂറാം വാര്‍ഷികം</h5>
+                <p class="card-text text-light small">സമസ്ത നൂറാം വാര്‍ഷികം 2026 ഫെബ്രുവരി 4,5,6,7,8 തിയ്യതികളില്‍ കാസര്‍ഗോഡ് കുണിയയില്‍ നടക്കും.</p>
                 <a href="#" class="btn btn-outline-light btn-sm">Read More</a>
               </div>
             </div>
@@ -666,6 +666,7 @@
 
 </body>
 </html>
+
 
 
 
