--- a/index.html
+++ b/index.html
@@ -253,7 +253,7 @@
         <div class="topper-banner">Class 1</div>
         <div class="topper-content">
           <h5>Azim Faizan K</h5>
-          <h5>Amana Fathima NK</h5>
+          <h5>Amana Fathima</h5>
           <h5>Nasha Mehrin M</h5>
           <h5>Ayisha Ridha P</h5>
           <h5>Ayisha Zahra P</h5>
@@ -347,7 +347,7 @@
 }
 
 .topper-card {
-  background: #ffffff;
+  background: #c4338d;
   border-radius: 12px;
   box-shadow: 0 4px 10px rgba(0,0,0,0.1);
   width: 160px;
@@ -670,6 +670,7 @@
 
 </body>
 </html>
+
 
 
 
