--- a/index.html
+++ b/index.html
@@ -347,7 +347,7 @@
 }
 
 .topper-card {
-  background: #c4338d;
+  background: #ffffff;
   border-radius: 12px;
   box-shadow: 0 4px 10px rgba(0,0,0,0.1);
   width: 160px;
@@ -670,6 +670,7 @@
 
 </body>
 </html>
+
 
 
 
