--- a/library.html
+++ b/library.html
@@ -68,6 +68,14 @@
       font-size: 0.9rem;
     }
 
+    .section-title {
+      text-align: center;
+      color: #0b5c38;
+      font-family: 'El Messiri', serif;
+      font-weight: 600;
+      margin-bottom: 2rem;
+    }
+
     .external-section {
       background: #eaf4ed;
       border-top: 2px solid #0b5c38;
@@ -125,9 +133,10 @@
     </div>
   </header>
 
-  <!-- LIBRARY SECTION -->
+  <!-- ISLAMIC BOOKS SECTION -->
   <section class="py-5">
     <div class="container">
+      <h3 class="section-title">📖 Islamic Knowledge Section</h3>
       <div class="row g-4">
 
         <!-- Book 1 -->
@@ -137,7 +146,7 @@
             <div class="card-body">
               <h5>Al-Qur'an (Kareem)</h5>
               <p>Read and reflect upon the divine words of Allah.</p>
-              <a href="#" class="btn btn-success btn-sm">Read Now</a>
+              <a href="https://quran.com" target="_blank" class="btn btn-success btn-sm">Read Now</a>
             </div>
           </div>
         </div>
@@ -149,7 +158,7 @@
             <div class="card-body">
               <h5>Hadith Collection</h5>
               <p>Sayings and teachings of Prophet Muhammad ﷺ.</p>
-              <a href="#" class="btn btn-success btn-sm">View Hadith</a>
+              <a href="https://sunnah.com" target="_blank" class="btn btn-success btn-sm">View Hadith</a>
             </div>
           </div>
         </div>
@@ -183,6 +192,52 @@
       <!-- Back to Home -->
       <div class="text-center mt-5">
         <a href="index.html" class="btn btn-outline-success btn-home">← Back to Home</a>
+      </div>
+    </div>
+  </section>
+
+  <!-- MALAYALAM BOOKS SECTION -->
+  <section class="py-5" style="background:#f6faf7;">
+    <div class="container">
+      <h3 class="section-title">📘 Malayalam Islamic Books</h3>
+      <div class="row g-4">
+
+        <!-- Malayalam Book 1 -->
+        <div class="col-6 col-md-4 col-lg-3">
+          <div class="card book-card">
+            <img src="https://i.ibb.co/7jm0bsk/malayalam-book1.jpg" alt="Malayalam Book 1" class="card-img-top">
+            <div class="card-body">
+              <h5>ഇസ്ലാമിക പാഠങ്ങൾ</h5>
+              <p>ആധുനിക ജീവിതത്തിൽ ഇസ്ലാമിന്റെ പാഠങ്ങൾ.</p>
+              <a href="https://www.muslim-library.com/dl/books/Malayalam-Islamic.pdf" target="_blank" class="btn btn-success btn-sm">Read PDF</a>
+            </div>
+          </div>
+        </div>
+
+        <!-- Malayalam Book 2 -->
+        <div class="col-6 col-md-4 col-lg-3">
+          <div class="card book-card">
+            <img src="https://i.ibb.co/N3zpZVg/malayalam-book2.jpg" alt="Malayalam Book 2" class="card-img-top">
+            <div class="card-body">
+              <h5>പ്രവാചക ജീവിതം</h5>
+              <p>നബി (സ) യുടെ മഹത്വം പഠിക്കൂ.</p>
+              <a href="https://www.islamhouse.com/ml/books/" target="_blank" class="btn btn-success btn-sm">View Book</a>
+            </div>
+          </div>
+        </div>
+
+        <!-- Malayalam Book 3 -->
+        <div class="col-6 col-md-4 col-lg-3">
+          <div class="card book-card">
+            <img src="https://i.ibb.co/RDTWQ9L/malayalam-book3.jpg" alt="Malayalam Book 3" class="card-img-top">
+            <div class="card-body">
+              <h5>ഖുർആൻ സന്ദേശം</h5>
+              <p>മലയാള വിവർത്തനത്തോട് കൂടി ഖുർആൻ.</p>
+              <a href="https://quranmalayalam.com" target="_blank" class="btn btn-success btn-sm">Read Online</a>
+            </div>
+          </div>
+        </div>
+
       </div>
     </div>
   </section>
