--- a/index.html
+++ b/index.html
@@ -520,7 +520,7 @@
               <img src="https://i.ibb.co/LDJxRX0j/freelancer-pricing-04.png" class="card-img-top rounded-top" alt="Parents meet">
               <div class="card-body">
                 <h5 class="card-title text-warning">parents Meeting</h5>
-                <p class="card-text text-light small">Parents meeting codected on 16th November 2026.</p>
+                <p class="card-text text-light small">Parents meeting will be held on 16th November 2025.</p>
                 <a href="#" class="btn btn-outline-light btn-sm">Read More</a>
               </div>
             </div>
@@ -604,16 +604,54 @@
 </section>
 
 <!-- FOOTER -->
-<footer class="py-4 text-center">
+<footer class="py-4 text-center" style="background: #0b5c38; color: #ffffff; font-size: 0.9rem;">
   <div class="container">
-    <strong class="text-uppercase d-block fs-5" style="color:var(--accent)">Noorussalam Madrasa</strong>
-    <small class="d-block">© <span id="year"></span> All rights reserved.</small>
-    <div class="mt-2">
-      Hosted by <strong>Suhail Kerala</strong> • 
-      <a href="mailto:noorussalam6110@gmail.com">noorussalam6110@gmail.com</a>
+    <strong class="text-uppercase d-block fs-6" style="letter-spacing: 1px; color: #eaf4ed;">
+      Noorussalam Madrasa
+    </strong>
+    <small class="d-block" style="font-size: 0.8rem; color: #cde3d6;">
+      © <span id="year"></span> All rights reserved.
+    </small>
+
+    <!-- Social Icons -->
+    <div class="mt-3 d-flex justify-content-center gap-3">
+      <!-- Facebook -->
+      <a href="https://facebook.com/" target="_blank"
+         style="background:#1877f2; color:white; width:35px; height:35px; display:flex; align-items:center; justify-content:center; border-radius:50%; text-decoration:none; font-size:18px;">
+        <i class="bi bi-facebook"></i>
+      </a>
+
+      <!-- Instagram -->
+      <a href="https://instagram.com/" target="_blank"
+         style="background:#e4405f; color:white; width:35px; height:35px; display:flex; align-items:center; justify-content:center; border-radius:50%; text-decoration:none; font-size:18px;">
+        <i class="bi bi-instagram"></i>
+      </a>
+
+      <!-- X (Twitter) -->
+      <a href="https://x.com/" target="_blank"
+         style="background:#000000; color:white; width:35px; height:35px; display:flex; align-items:center; justify-content:center; border-radius:50%; text-decoration:none; font-size:18px;">
+        <i class="bi bi-twitter-x"></i>
+      </a>
+    </div>
+
+    <!-- Credits -->
+    <div class="mt-3" style="font-size: 0.85rem; color: #eaf4ed;">
+      Hosted by <strong style="font-weight: 600; color: #ffffff;">Suhail Kerala</strong> • 
+      <a href="mailto:noorussalam6110@gmail.com" style="color: #a8e6c2; text-decoration: none;">
+        noorussalam6110@gmail.com
+      </a>
     </div>
   </div>
 </footer>
+
+<!-- Bootstrap Icons -->
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
+
+<script>
+  // Auto-update year
+  document.getElementById("year").textContent = new Date().getFullYear();
+</script>
+
 
 <!-- JS -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
@@ -670,24 +708,3 @@
 
 </body>
 </html>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
