--- a/index.html
+++ b/index.html
@@ -604,40 +604,37 @@
 </section>
 
 <!-- FOOTER -->
-<footer class="py-4 text-center" style="background: #0b5c38; color: #ffffff; font-size: 0.9rem;">
+<footer id="footer" class="py-4 text-center" style="background: linear-gradient(135deg, #0d47a1, #1976d2); color: #ffffff; font-size: 0.9rem; opacity: 0; transform: translateY(20px); transition: all 1s ease;">
   <div class="container">
-    <strong class="text-uppercase d-block fs-6" style="letter-spacing: 1px; color: #eaf4ed;">
+    <strong class="text-uppercase d-block fs-6" style="letter-spacing: 1px; color: #eaf1fb;">
       Noorussalam Madrasa
     </strong>
-    <small class="d-block" style="font-size: 0.8rem; color: #cde3d6;">
+    <small class="d-block" style="font-size: 0.8rem; color: #d0e3ff;">
       © <span id="year"></span> All rights reserved.
     </small>
 
     <!-- Social Icons -->
     <div class="mt-3 d-flex justify-content-center gap-3">
       <!-- Facebook -->
-      <a href="https://facebook.com/" target="_blank"
-         style="background:#1877f2; color:white; width:35px; height:35px; display:flex; align-items:center; justify-content:center; border-radius:50%; text-decoration:none; font-size:18px;">
+      <a href="https://facebook.com/" target="_blank" class="social-icon" style="background:#1877f2;">
         <i class="bi bi-facebook"></i>
       </a>
 
       <!-- Instagram -->
-      <a href="https://instagram.com/" target="_blank"
-         style="background:#e4405f; color:white; width:35px; height:35px; display:flex; align-items:center; justify-content:center; border-radius:50%; text-decoration:none; font-size:18px;">
+      <a href="https://instagram.com/" target="_blank" class="social-icon" style="background:#e4405f;">
         <i class="bi bi-instagram"></i>
       </a>
 
       <!-- X (Twitter) -->
-      <a href="https://x.com/" target="_blank"
-         style="background:#000000; color:white; width:35px; height:35px; display:flex; align-items:center; justify-content:center; border-radius:50%; text-decoration:none; font-size:18px;">
+      <a href="https://x.com/" target="_blank" class="social-icon" style="background:#1da1f2;">
         <i class="bi bi-twitter-x"></i>
       </a>
     </div>
 
     <!-- Credits -->
-    <div class="mt-3" style="font-size: 0.85rem; color: #eaf4ed;">
+    <div class="mt-3" style="font-size: 0.85rem; color: #d0e3ff;">
       Hosted by <strong style="font-weight: 600; color: #ffffff;">Suhail Kerala</strong> • 
-      <a href="mailto:noorussalam6110@gmail.com" style="color: #a8e6c2; text-decoration: none;">
+      <a href="mailto:noorussalam6110@gmail.com" style="color: #bbdefb; text-decoration: none;">
         noorussalam6110@gmail.com
       </a>
     </div>
@@ -647,10 +644,49 @@
 <!-- Bootstrap Icons -->
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
 
+<!-- Icon Animation Style -->
+<style>
+  .social-icon {
+    color: white;
+    width: 36px;
+    height: 36px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 50%;
+    text-decoration: none;
+    font-size: 18px;
+    transition: all 0.3s ease-in-out;
+  }
+
+  .social-icon:hover {
+    transform: scale(1.15);
+    box-shadow: 0 0 14px rgba(255, 255, 255, 0.7);
+  }
+
+  footer {
+    box-shadow: 0 -2px 10px rgba(0, 0, 0, 0.2);
+  }
+</style>
+
 <script>
   // Auto-update year
   document.getElementById("year").textContent = new Date().getFullYear();
+
+  // Fade-in animation when footer comes into view
+  window.addEventListener('scroll', function() {
+    const footer = document.getElementById('footer');
+    const footerPosition = footer.getBoundingClientRect().top;
+    const screenPosition = window.innerHeight;
+
+    if (footerPosition < screenPosition - 50) {
+      footer.style.opacity = '1';
+      footer.style.transform = 'translateY(0)';
+    }
+  });
 </script>
+
+
 
 
 <!-- JS -->
@@ -708,3 +744,4 @@
 
 </body>
 </html>
+
