--- a/index.html
+++ b/index.html
@@ -209,6 +209,7 @@
       <div>
         <div class="fw-bold text-uppercase text-white">Noorussalam Madrasa</div>
         <small class="text-light">Kambippalam, Kerala Estate</small>
+        <small class="text-light">under SKIMVB, Reg No:6110</small>
       </div>
     </a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navMenu">
@@ -744,4 +745,5 @@
 
 </body>
 </html>
+
 
