--- a/index.html
+++ b/index.html
@@ -242,98 +242,126 @@
     <a href="#about" class="btn btn-outline-secondary btn-lg m-2">Learn More</a>
   </div>
 </section>
-<!-- ===== EXAMINATION TOPPERS SECTION ===== -->
-<section class="toppers-section py-5 bg-light">
-  <div class="container text-center" data-aos="fade-up">
-    <h2 class="fw-bold mb-4 text-primary">Half Yearly Examination Toppers 2025</h2>
+<!-- 🌟 Class Toppers Section -->
+<section id="class-toppers" style="padding:60px 0; background:linear-gradient(135deg,#f8f9fa,#ffffff); font-family:'Poppins',sans-serif;">
+  <div style="max-width:1100px; margin:auto; text-align:center;">
+    <h2 style="font-size:2rem; color:#2b7a2b; margin-bottom:40px; letter-spacing:1px;">
+      🏆 Class Toppers
+    </h2>
 
-    <div class="toppers-bar d-flex overflow-auto py-3 px-2">
-      <!-- Topper Cards -->
-      <div class="topper-card me-3 flex-shrink-0">
-        <div class="topper-banner">Class 1</div>
-        <div class="topper-content">
-          <h5>Azim Faizan K</h5>
-          <h5>Amana Fathima</h5>
-          <h5>Nasha Mehrin M</h5>
-          <h5>Ayisha Ridha P</h5>
-          <h5>Ayisha Zahra P</h5>
-          <p>100%</p>
-        </div>
-      </div>
-      <div class="topper-card me-3 flex-shrink-0">
-        <div class="topper-banner">Class 2</div>
-        <div class="topper-content">
-          <h5>Hina Mehrin TK</h5>
-          <p>97%</p>
-        </div>
-      </div>
-      <div class="topper-card me-3 flex-shrink-0">
-        <div class="topper-banner">Class 3</div>
-        <div class="topper-content">
-          <h5>Naba Fathima V</h5>
-          <p>96%</p>
-        </div>
-      </div>
-      <div class="topper-card me-3 flex-shrink-0">
-        <div class="topper-banner">Class 4</div>
-        <div class="topper-content">
-          <h5>Isha Mehrin AK</h5>
-          <p>97%</p>
-        </div>
-      </div>
-      <div class="topper-card me-3 flex-shrink-0">
-        <div class="topper-banner">Class 5</div>
-        <div class="topper-content">
-          <h5>Emin Yash</h5>
-          <p>96%</p>
-        </div>
-      </div>
-      <div class="topper-card me-3 flex-shrink-0">
-        <div class="topper-banner">Class 6</div>
-        <div class="topper-content">
-          <h5>Sanha M</h5>
-          <p>98%</p>
-        </div>
-      </div>
-      <div class="topper-card me-3 flex-shrink-0">
-        <div class="topper-banner">Class 7</div>
-        <div class="topper-content">
-          <h5>Fidha KT</h5>
-          <p>97%</p>
-        </div>
-      </div>
-      <div class="topper-card me-3 flex-shrink-0">
-        <div class="topper-banner">Class 8</div>
-        <div class="topper-content">
-          <h5>Nidha Fathima KP</h5>
-          <p>98%</p>
-        </div>
-      </div>
-      <div class="topper-card me-3 flex-shrink-0">
-        <div class="topper-banner">Class 9</div>
-        <div class="topper-content">
-          <h5>Rishal</h5>
-          <p>96%</p>
-        </div>
-      </div>
-      <div class="topper-card flex-shrink-0">
-        <div class="topper-banner">Class 10</div>
-        <div class="topper-content">
-          <h5>Riya T</h5>
-          <p>99%</p>
-        </div>
-      </div>
-    </div>
+    <div style="display:flex; flex-wrap:wrap; justify-content:center; gap:25px;">
 
-    <!-- View All Results Button -->
-    <div class="mt-4">
-      <a href="maintenance.html" class="btn btn-lg" style="background-color: #f3c13a; color: #fff; font-weight: 600;">
-        View All Results
-      </a>
+      <!-- Class 1 -->
+      <div style="background:#fff; width:260px; border-radius:15px; box-shadow:0 4px 15px rgba(0,0,0,0.1); padding:25px; transition:0.3s;">
+        <h3 style="margin:0 0 10px; color:#2b7a2b;">Muhammed Afsal</h3>
+        <table style="width:100%; border-collapse:collapse; font-size:0.95rem;">
+          <tr><td style="color:#555;">Class</td><td style="text-align:right;">1</td></tr>
+          <tr><td style="color:#555;">Percentage</td><td style="text-align:right; color:#ffb300; font-weight:600;">98%</td></tr>
+          <tr><td style="color:#555;">Rank</td><td style="text-align:right; color:#2b7a2b;">Topper</td></tr>
+        </table>
+      </div>
+
+      <!-- Class 2 -->
+      <div style="background:#fff; width:260px; border-radius:15px; box-shadow:0 4px 15px rgba(0,0,0,0.1); padding:25px; transition:0.3s;">
+        <h3 style="margin:0 0 10px; color:#2b7a2b;">Fathima Hiba</h3>
+        <table style="width:100%; border-collapse:collapse; font-size:0.95rem;">
+          <tr><td style="color:#555;">Class</td><td style="text-align:right;">2</td></tr>
+          <tr><td style="color:#555;">Percentage</td><td style="text-align:right; color:#ffb300; font-weight:600;">97%</td></tr>
+          <tr><td style="color:#555;">Rank</td><td style="text-align:right; color:#2b7a2b;">Topper</td></tr>
+        </table>
+      </div>
+
+      <!-- Class 3 -->
+      <div style="background:#fff; width:260px; border-radius:15px; box-shadow:0 4px 15px rgba(0,0,0,0.1); padding:25px; transition:0.3s;">
+        <h3 style="margin:0 0 10px; color:#2b7a2b;">Ameen Faiz</h3>
+        <table style="width:100%; border-collapse:collapse; font-size:0.95rem;">
+          <tr><td style="color:#555;">Class</td><td style="text-align:right;">3</td></tr>
+          <tr><td style="color:#555;">Percentage</td><td style="text-align:right; color:#ffb300; font-weight:600;">96%</td></tr>
+          <tr><td style="color:#555;">Rank</td><td style="text-align:right; color:#2b7a2b;">Topper</td></tr>
+        </table>
+      </div>
+
+      <!-- Class 4 -->
+      <div style="background:#fff; width:260px; border-radius:15px; box-shadow:0 4px 15px rgba(0,0,0,0.1); padding:25px; transition:0.3s;">
+        <h3 style="margin:0 0 10px; color:#2b7a2b;">Rashid Rahman</h3>
+        <table style="width:100%; border-collapse:collapse; font-size:0.95rem;">
+          <tr><td style="color:#555;">Class</td><td style="text-align:right;">4</td></tr>
+          <tr><td style="color:#555;">Percentage</td><td style="text-align:right; color:#ffb300; font-weight:600;">95%</td></tr>
+          <tr><td style="color:#555;">Rank</td><td style="text-align:right; color:#2b7a2b;">Topper</td></tr>
+        </table>
+      </div>
+
+      <!-- Class 5 -->
+      <div style="background:#fff; width:260px; border-radius:15px; box-shadow:0 4px 15px rgba(0,0,0,0.1); padding:25px; transition:0.3s;">
+        <h3 style="margin:0 0 10px; color:#2b7a2b;">Hana Naseem</h3>
+        <table style="width:100%; border-collapse:collapse; font-size:0.95rem;">
+          <tr><td style="color:#555;">Class</td><td style="text-align:right;">5</td></tr>
+          <tr><td style="color:#555;">Percentage</td><td style="text-align:right; color:#ffb300; font-weight:600;">96%</td></tr>
+          <tr><td style="color:#555;">Rank</td><td style="text-align:right; color:#2b7a2b;">Topper</td></tr>
+        </table>
+      </div>
+
+      <!-- Class 6 -->
+      <div style="background:#fff; width:260px; border-radius:15px; box-shadow:0 4px 15px rgba(0,0,0,0.1); padding:25px; transition:0.3s;">
+        <h3 style="margin:0 0 10px; color:#2b7a2b;">Suhana Rahim</h3>
+        <table style="width:100%; border-collapse:collapse; font-size:0.95rem;">
+          <tr><td style="color:#555;">Class</td><td style="text-align:right;">6</td></tr>
+          <tr><td style="color:#555;">Percentage</td><td style="text-align:right; color:#ffb300; font-weight:600;">94%</td></tr>
+          <tr><td style="color:#555;">Rank</td><td style="text-align:right; color:#2b7a2b;">Topper</td></tr>
+        </table>
+      </div>
+
+      <!-- Class 7 -->
+      <div style="background:#fff; width:260px; border-radius:15px; box-shadow:0 4px 15px rgba(0,0,0,0.1); padding:25px; transition:0.3s;">
+        <h3 style="margin:0 0 10px; color:#2b7a2b;">Abdul Hadi</h3>
+        <table style="width:100%; border-collapse:collapse; font-size:0.95rem;">
+          <tr><td style="color:#555;">Class</td><td style="text-align:right;">7</td></tr>
+          <tr><td style="color:#555;">Percentage</td><td style="text-align:right; color:#ffb300; font-weight:600;">95%</td></tr>
+          <tr><td style="color:#555;">Rank</td><td style="text-align:right; color:#2b7a2b;">Topper</td></tr>
+        </table>
+      </div>
+
+      <!-- Class 8 -->
+      <div style="background:#fff; width:260px; border-radius:15px; box-shadow:0 4px 15px rgba(0,0,0,0.1); padding:25px; transition:0.3s;">
+        <h3 style="margin:0 0 10px; color:#2b7a2b;">Shamil Rahman</h3>
+        <table style="width:100%; border-collapse:collapse; font-size:0.95rem;">
+          <tr><td style="color:#555;">Class</td><td style="text-align:right;">8</td></tr>
+          <tr><td style="color:#555;">Percentage</td><td style="text-align:right; color:#ffb300; font-weight:600;">93%</td></tr>
+          <tr><td style="color:#555;">Rank</td><td style="text-align:right; color:#2b7a2b;">Topper</td></tr>
+        </table>
+      </div>
+
+      <!-- Class 9 -->
+      <div style="background:#fff; width:260px; border-radius:15px; box-shadow:0 4px 15px rgba(0,0,0,0.1); padding:25px; transition:0.3s;">
+        <h3 style="margin:0 0 10px; color:#2b7a2b;">Raniya Fathima</h3>
+        <table style="width:100%; border-collapse:collapse; font-size:0.95rem;">
+          <tr><td style="color:#555;">Class</td><td style="text-align:right;">9</td></tr>
+          <tr><td style="color:#555;">Percentage</td><td style="text-align:right; color:#ffb300; font-weight:600;">94%</td></tr>
+          <tr><td style="color:#555;">Rank</td><td style="text-align:right; color:#2b7a2b;">Topper</td></tr>
+        </table>
+      </div>
+
+      <!-- Class 10 -->
+      <div style="background:#fff; width:260px; border-radius:15px; box-shadow:0 4px 15px rgba(0,0,0,0.1); padding:25px; transition:0.3s;">
+        <h3 style="margin:0 0 10px; color:#2b7a2b;">Ameen Muhammed</h3>
+        <table style="width:100%; border-collapse:collapse; font-size:0.95rem;">
+          <tr><td style="color:#555;">Class</td><td style="text-align:right;">10</td></tr>
+          <tr><td style="color:#555;">Percentage</td><td style="text-align:right; color:#ffb300; font-weight:600;">96%</td></tr>
+          <tr><td style="color:#555;">Rank</td><td style="text-align:right; color:#2b7a2b;">Topper</td></tr>
+        </table>
+      </div>
+
     </div>
   </div>
-</section>
 
+  <!-- Hover Animation -->
+  <style>
+    #class-toppers div[style*="box-shadow"]:hover {
+      transform: translateY(-8px);
+      box-shadow: 0 8px 20px rgba(0,0,0,0.15);
+    }
+  </style>
+</section>
 <!-- ===== CSS STYLES ===== -->
 <style>
 .toppers-section {
@@ -744,6 +772,7 @@
 
 </body>
 </html>
+
 
 
 
