--- a/index.html
+++ b/index.html
@@ -255,28 +255,36 @@
       <div class="scroll-track">
 
         <!-- 🔹 Class toppers -->
-        <div class="topper-card"><h3>Class 1</h3><p>Muhammed Afsal</p><span>98%</span></div>
-        <div class="topper-card"><h3>Class 2</h3><p>Fathima Hiba</p><span>97%</span></div>
-        <div class="topper-card"><h3>Class 3</h3><p>Ameen Faiz</p><span>96%</span></div>
-        <div class="topper-card"><h3>Class 4</h3><p>Rashid Rahman</p><span>95%</span></div>
-        <div class="topper-card"><h3>Class 5</h3><p>Hana Naseem</p><span>96%</span></div>
-        <div class="topper-card"><h3>Class 6</h3><p>Suhana Rahim</p><span>94%</span></div>
-        <div class="topper-card"><h3>Class 7</h3><p>Abdul Hadi</p><span>95%</span></div>
-        <div class="topper-card"><h3>Class 8</h3><p>Shamil Rahman</p><span>93%</span></div>
-        <div class="topper-card"><h3>Class 9</h3><p>Raniya Fathima</p><span>94%</span></div>
-        <div class="topper-card"><h3>Class 10</h3><p>Ameen Muhammed</p><span>96%</span></div>
+        <div class="topper-card"><h3>Class 1</h3><p>Azim Faizan</p><span>100%</span></div>
+        <div class="topper-card"><h3>Class 1</h3><p>Amana Fathima</p><span>100%</span></div>
+        <div class="topper-card"><h3>Class 1</h3><p>Nasha Mehrin</p><span>100%</span></div>
+        <div class="topper-card"><h3>Class 1</h3><p>Ayisha Ridha</p><span>100%</span></div>
+        <div class="topper-card"><h3>Class 1</h3><p>Ayisha Zahra</p><span>100%</span></div>
+        <div class="topper-card"><h3>Class 2</h3><p>Hina Mehrin TK</p><span>97%</span></div>
+        <div class="topper-card"><h3>Class 3</h3><p>Naba Fathima V</p><span>96%</span></div>
+        <div class="topper-card"><h3>Class 4</h3><p>Isha Mehrin AK</p><span>95%</span></div>
+        <div class="topper-card"><h3>Class 5</h3><p>Emin Yash</p><span>96%</span></div>
+        <div class="topper-card"><h3>Class 6</h3><p>Sanha M</p><span>94%</span></div>
+        <div class="topper-card"><h3>Class 7</h3><p>Fidha KT</p><span>95%</span></div>
+        <div class="topper-card"><h3>Class 8</h3><p>Nidha Fathima KP</p><span>93%</span></div>
+        <div class="topper-card"><h3>Class 9</h3><p>Rishal</p><span>94%</span></div>
+        <div class="topper-card"><h3>Class 10</h3><p>Riya T</p><span>96%</span></div>
 
         <!-- Repeated for infinite scroll -->
-        <div class="topper-card"><h3>Class 1</h3><p>Muhammed Afsal</p><span>98%</span></div>
-        <div class="topper-card"><h3>Class 2</h3><p>Fathima Hiba</p><span>97%</span></div>
-        <div class="topper-card"><h3>Class 3</h3><p>Ameen Faiz</p><span>96%</span></div>
-        <div class="topper-card"><h3>Class 4</h3><p>Rashid Rahman</p><span>95%</span></div>
-        <div class="topper-card"><h3>Class 5</h3><p>Hana Naseem</p><span>96%</span></div>
-        <div class="topper-card"><h3>Class 6</h3><p>Suhana Rahim</p><span>94%</span></div>
-        <div class="topper-card"><h3>Class 7</h3><p>Abdul Hadi</p><span>95%</span></div>
-        <div class="topper-card"><h3>Class 8</h3><p>Shamil Rahman</p><span>93%</span></div>
-        <div class="topper-card"><h3>Class 9</h3><p>Raniya Fathima</p><span>94%</span></div>
-        <div class="topper-card"><h3>Class 10</h3><p>Ameen Muhammed</p><span>96%</span></div>
+        <div class="topper-card"><h3>Class 1</h3><p>Azim Faizan</p><span>100%</span></div>
+        <div class="topper-card"><h3>Class 1</h3><p>Amana Fathima</p><span>100%</span></div>
+        <div class="topper-card"><h3>Class 1</h3><p>Nasha Mehrin</p><span>100%</span></div>
+        <div class="topper-card"><h3>Class 1</h3><p>Ayisha Ridha</p><span>100%</span></div>
+        <div class="topper-card"><h3>Class 1</h3><p>Ayisha Zahra</p><span>100%</span></div>
+        <div class="topper-card"><h3>Class 2</h3><p>Hina Mehrin TK</p><span>97%</span></div>
+        <div class="topper-card"><h3>Class 3</h3><p>Naba Fathima V</p><span>96%</span></div>
+        <div class="topper-card"><h3>Class 4</h3><p>Isha Mehrin AK</p><span>95%</span></div>
+        <div class="topper-card"><h3>Class 5</h3><p>Emin Yash</p><span>96%</span></div>
+        <div class="topper-card"><h3>Class 6</h3><p>Sanha M</p><span>94%</span></div>
+        <div class="topper-card"><h3>Class 7</h3><p>Fidha KT</p><span>95%</span></div>
+        <div class="topper-card"><h3>Class 8</h3><p>Nidha Fathima KP</p><span>93%</span></div>
+        <div class="topper-card"><h3>Class 9</h3><p>Rishal</p><span>94%</span></div>
+        <div class="topper-card"><h3>Class 10</h3><p>Riya T</p><span>96%</span></div>
       </div>
     </div>
   </div>
@@ -795,6 +803,7 @@
 
 </body>
 </html>
+
 
 
 
