--- a/index.html
+++ b/index.html
@@ -252,10 +252,36 @@
   <div class="stars3"></div>
 
   <div style="max-width:1100px; margin:auto; text-align:center; position:relative; z-index:2;">
-    <h1 style="font-size:2.3rem; color:#004aad; margin-bottom:50px; font-weight:700; letter-spacing:1px;">
-      Class Toppers-Half yearly Examination 2025-26
-      <div style="width:90px; height:4px; background:#004aad; margin:12px auto; border-radius:2px;"></div>
-    </h1>
+
+    <!-- 🩵 Heading Box -->
+    <div style="display:inline-block; background:#ffffff; border:2px solid #004aad; border-radius:15px; padding:30px 50px; box-shadow:0 8px 20px rgba(0,0,0,0.1);">
+      <h1 style="font-size:2.3rem; color:#004aad; font-weight:700; letter-spacing:1px; margin:0;">
+        Class Toppers <br>
+        <span style="font-size:1.3rem; color:#0074d9;">Half Yearly Examination 2025-26</span>
+      </h1>
+      <div style="width:90px; height:4px; background:#004aad; margin:15px auto 0; border-radius:2px;"></div>
+    </div>
+
+  </div>
+</section>
+
+<!-- 🌠 Star Animation CSS -->
+<style>
+@keyframes twinkle {
+  from {opacity: 0.3;} to {opacity: 1;}
+}
+.stars, .stars2, .stars3 {
+  position:absolute; width:100%; height:100%;
+  background-repeat:repeat;
+  background-size:contain;
+  animation: twinkle 2s infinite alternate;
+  z-index:1; top:0; left:0;
+}
+.stars {background-image:url('https://www.transparenttextures.com/patterns/stardust.png'); animation-duration:3s;}
+.stars2 {background-image:url('https://www.transparenttextures.com/patterns/stardust.png'); animation-duration:4s;}
+.stars3 {background-image:url('https://www.transparenttextures.com/patterns/stardust.png'); animation-duration:5s;}
+</style>
+
 
     <div class="topper-scroll">
       <div class="scroll-track">
@@ -826,6 +852,7 @@
 
 </body>
 </html>
+
 
 
 
