--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@
 </section>
 
 <!-- 🌟 Class Toppers Section -->
-<section id="class-toppers" style="padding:80px 0; background:linear-gradient(135deg,#dce9ff,#ffffff); font-family:'Poppins',sans-serif; overflow:hidden; position:relative;">
+<section id="class-toppers" style="padding:70px 0; background:linear-gradient(135deg,#dce9ff,#ffffff); font-family:'Poppins',sans-serif; overflow:hidden; position:relative;">
 
   <!-- ✨ Twinkling Star Layers -->
   <div class="stars"></div>
@@ -252,20 +252,19 @@
   <div class="stars3"></div>
 
   <div style="max-width:1100px; margin:auto; text-align:center; position:relative; z-index:2;">
-
-    <!-- 🩵 Heading Box -->
-    <div style="display:inline-block; background:#ffffff; border:2px solid #004aad; border-radius:15px; padding:30px 50px; box-shadow:0 8px 20px rgba(0,0,0,0.1);">
-      <h1 style="font-size:2.3rem; color:#004aad; font-weight:700; letter-spacing:1px; margin:0;">
-        Class Toppers <br>
-        <span style="font-size:1.3rem; color:#0074d9;">Half Yearly Examination 2025-26</span>
+    
+    <!-- 🩵 Heading Box (with fade-in animation) -->
+    <div class="topper-heading-box">
+      <h1 style="font-size:2.2rem; color:#004aad; font-weight:700; letter-spacing:1px; margin:0;">
+        Class Toppers – Half Yearly Examination 2025-26
       </h1>
-      <div style="width:90px; height:4px; background:#004aad; margin:15px auto 0; border-radius:2px;"></div>
+      <div style="width:80px; height:4px; background:#004aad; margin:12px auto 0; border-radius:2px;"></div>
     </div>
 
   </div>
 </section>
 
-<!-- 🌠 Star Animation CSS -->
+<!-- 🌠 Star Animation + Heading Animation CSS -->
 <style>
 @keyframes twinkle {
   from {opacity: 0.3;} to {opacity: 1;}
@@ -280,8 +279,41 @@
 .stars {background-image:url('https://www.transparenttextures.com/patterns/stardust.png'); animation-duration:3s;}
 .stars2 {background-image:url('https://www.transparenttextures.com/patterns/stardust.png'); animation-duration:4s;}
 .stars3 {background-image:url('https://www.transparenttextures.com/patterns/stardust.png'); animation-duration:5s;}
+
+/* 🌈 Heading Box Style + Animation */
+.topper-heading-box {
+  display:inline-block;
+  background:rgba(255,255,255,0.9);
+  border:2px solid #004aad;
+  border-radius:15px;
+  padding:20px 35px;
+  box-shadow:0 6px 18px rgba(0,0,0,0.08);
+  opacity:0;
+  transform:translateY(30px);
+  transition:all 0.8s ease-out;
+}
+
+/* 👇 Animation when visible */
+.topper-heading-box.show {
+  opacity:1;
+  transform:translateY(0);
+}
 </style>
 
+<!-- 🌟 Fade-in Trigger Script -->
+<script>
+document.addEventListener("DOMContentLoaded", () => {
+  const box = document.querySelector('.topper-heading-box');
+  const observer = new IntersectionObserver(entries => {
+    entries.forEach(entry => {
+      if (entry.isIntersecting) {
+        box.classList.add('show');
+      }
+    });
+  }, { threshold: 0.2 });
+  observer.observe(box);
+});
+</script>
 
     <div class="topper-scroll">
       <div class="scroll-track">
@@ -852,6 +884,7 @@
 
 </body>
 </html>
+
 
 
 
